# dungeon-crawler

./: .gitignore  CMakeLists.txt  README.md  run.bat  run.sh
.VSCodeCounter/2023-11-26_02-42-01/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
assets/levels/: c1_et.tmj  c1_et_background.csv  c1_et_foreground.csv  diamond_passageway_background.csv  diamond_passageway_foreground.csv
assets/shaders/: fs.glsl  light_fs.glsl  light_vs.glsl  scene_fs.glsl  text_fs.glsl  tm_chunk_fs.glsl  tm_chunk_vs.glsl  ui_fs.glsl  ui_sprite_fs.glsl  ui_sprite_vs.glsl  ui_text_fs.glsl  vs.glsl
assets/ui/: debug_overlay.xml
src/: main.cpp
src/engine/: Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  Scene.cpp  Scene.h  SpriteManager.cpp  SpriteManager.h  Tilemap.cpp  Tilemap.h  Window.cpp  Window.h
src/engine/components/: Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  ComponentOrder.cpp  ComponentOrder.h  Lifetime.cpp  Lifetime.h  LightSource.cpp  LightSource.h  Physics.cpp  Physics.h  RendererComponent.cpp  RendererComponent.h  ShapeRenderer.cpp  ShapeRenderer.h  SpriteAnimator.cpp  SpriteAnimator.h  SpriteRenderer.cpp  SpriteRenderer.h
src/engine/components/renderers/: AnimatedSpriteRenderer.cpp  AnimatedSpriteRenderer.h  RendererComponent.cpp  RendererComponent.h  ShapeRenderer.cpp  ShapeRenderer.h  SpriteRenderer.cpp  SpriteRenderer.h
src/engine/graphics/: Window.cpp  Window.h
src/engine/managers/: AnimationManager.cpp  AnimationManager.h  FontManager.cpp  FontManager.h  InputManager.cpp  InputManager.h  Managers.cpp  Managers.h  SceneManager.cpp  SceneManager.h  ShaderManager.cpp  ShaderManager.h  SpriteManager.cpp  SpriteManager.h
src/engine/ui/: Canvas.cpp  Canvas.h  ContainerElement.cpp  ContainerElement.h  SpriteElement.cpp  SpriteElement.h  TextElement.cpp  TextElement.h  UIElement.cpp  UIElement.h
src/engine/utils/: Animation.cpp  Animation.h  AnimationController.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Graphics.cpp  Graphics.h  Light.h  Math.cpp  Math.h  Matrix2D.cpp  Matrix2D.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Wall.cpp  Wall.h  io.cpp  io.h  meshes.cpp  meshes.h
src/game/: Scenes.cpp  Scenes.h  prefabs.cpp  prefabs.h
src/game/components/: EnterListener.cpp  EnterListener.h  PlayerMovement.cpp  PlayerMovement.h  Shrink.cpp  Shrink.h  Spawner.cpp  Spawner.h  Spin.cpp  Spin.h
